# rag_article_search

./: .dockerignore  .gitignore  =5.0.0  Dockerfile  README.md  TODO.md  abstract_db_query.py  abstract_llm_only.py  abstract_rag_2_advanced.py  abstract_rag_classifier.py  abstract_rag_rewrite.py  abstract_rag_simple.py  agentic_rag.py  agentic_rag_finetune.py  app.py  base_llm.py  base_rag.py  batch_processor.py  cli.py  config.yaml  docker-compose.yml  download_filter_embed_upsert.py  main.py  main_app.py  main_cli.py  prompts.txt  pyproject.toml  requirements.txt  streamlit_app.py  test_cli.py  unit_test.py  unit_test_prep.py
config/: config.yaml
models/: README.md  adapter_config.json
output/: batch_results_20250320_231339.csv  output_db_query.txt  output_rag_classifier.txt  output_rag_rewrite.txt  output_rag_simple.txt  sample_output_comments.docx  unit_test_results.txt
rag_comparison/: README.md  abstract_llm_only.py  abstract_rag_2_advanced.py  abstract_rag_classifier.py  abstract_rag_rewrite.py
rag_comparison/output/: output_db_query.txt  output_llm.txt  output_rag_2_adv.txt  output_responses.csv
scripts/: get_data_pipeline.py  graph_viz.py  run_agentic_llm.py  run_pipeline.py
src/: main_app.py  main_cli.py
src/connections/: __init__.py  gemini_query.py  logger.py  pinecone_db.py
src/core/: __init__.py  nodes.py  rag_graph.py  state.py
src/loaders/: data_loader.py  download.py  embedding.py
src/models/: __init__.py  model_loader.py
src/processing/: __init__.py
src/rag/: __init__.py  rag_graph.py  state.py
src/rag/nodes/: __init__.py  classification.py  response_generation.py  retrieval.py  rewrite.py  simplify.py
src/ui/: __init__.py  components.py  config.py  data_pipeline.py  display.py  initialization.py  query_handler.py
src/visualization/: __init__.py  graph_viz.py
test/: __init__.py  conftest.py  test_cuda_usage.py  test_data_loader.py  test_main.py  test_model_loader.py  test_nodes.py  test_rag_graph.py  unit_test_prep.py
test/test_connections/: __init__.py  test_gemini_query.py  test_pinecone_db.py
test/test_core/: test_nodes.py  test_rag_graph.py
test/test_loaders/: test_data_loader.py
test/test_models/: test_model_loader.py
utils/: logger.py
