[tool.poetry]
name = "rag-article-search"
version = "0.1.0"
description = "An advanced Retrieval-Augmented Generation (RAG) system."
authors = ["John He <johnhe@u.northwestern.edu>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
python-dotenv = ">=1.0.1"
pyyaml = ">=6.0.1"
kaggle = ">=1.6.14"
kagglehub = ">=0.2.0"
pandas = ">=2.2.2"
tqdm = ">=4.66.4"
numpy = ">=1.24.0"
streamlit = ">=1.28.0"
fastembed = ">=0.3.1"
sentence-transformers = ">=2.2.2"
onnxruntime = ">=1.16.0"
langchain = ">=0.2.5"
langchain-text-splitters = ">=0.2.1"
langchain-huggingface = ">=0.0.3"
langchain-pinecone = ">=0.1.1"
langchain-core = ">=0.2.9"
pinecone = ">=5.0.0"
langgraph = ">=0.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.0"
pytest = "^8.4.1"
urllib3 = "^2.2.2"
google-genai = "^1.41.0"
peft = "^0.17.1"
transformers = "^4.57.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
ipykernel = "^6.30.1"

[tool.poetry.group.gpu.dependencies]
onnxruntime-gpu = ">=1.16.0"
torch = {version = ">=2.5.1", source = "pytorch"}
torchvision = {version = "*", source = "pytorch"}
torchaudio = {version = "*", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"